<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_gravity="bottom"
        android:indeterminateOnly="true"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_16"
        android:background="#80FFFFFF"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/space_16"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/rg_algorithm"
            />

        <RadioGroup
            android:id="@+id/rgAlgorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">
            <RadioButton
                android:id="@+id/rbAlgorithmSqlCombo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:checked="true"
                android:text="@string/rb_sql_combo"/>
            <RadioButton
                android:id="@+id/rbAlgorithmSql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/rb_sql"/>
            <RadioButton
                android:id="@+id/rbAlgorithmStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/rb_standard"/>
        </RadioGroup>

    </LinearLayout>
</FrameLayout>

